hphp/test/slow/reassign_this/1492.php.expectf

Fatal error: Cannot re-assign $this in %s/test/slow/reassign_this/1492.php on line 4
